<resources>
    <string name="app_name">CheckedApp</string>
    <string name="login">Login</string>
    <string name="login_desc">Silahkan login menggunakan akun yang anda miliki</string>
    <string name="username">Username</string>
    <string name="username_">Masukkan username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_">Masukkan Email</string>
    <string name="register">Register</string>
    <string name="register_desc">Silahkan isi data terlebih dahulu sebelum menaljutkan</string>
    <string name="must_not_empty">Tidak boleh kosong</string>
    <string name="not_email_input">Tidak dalam format email</string>
    <string name="add">Tambah</string>
</resources>